--- a/Profile-Card-HTML-CSS/index.html
+++ b/Profile-Card-HTML-CSS/index.html
@@ -1,10 +1,18 @@
+<!-- Coding by GeekyyFit |  -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Card</title>
+    <title>Profile Card UI Design</title>
+
+    <!-- adding CSS -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Boxicons CSS -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 
 <body>
