--- a/Profile-Card-HTML-CSS/index.html
+++ b/Profile-Card-HTML-CSS/index.html
@@ -16,7 +16,11 @@
 </head>
 
 <body>
-
+    <div class="profile-card">
+        <div class="image">
+            <img src="MmPgrN7g_400x400.jpg" alt="" class="profile-img">
+        </div>
+    </div>
 </body>
 
 </html>
