final changes are made and completed the project

--- a/Profile-Card-HTML-CSS/index.html
+++ b/Profile-Card-HTML-CSS/index.html
@@ -20,6 +20,37 @@
         <div class="image">
             <img src="MmPgrN7g_400x400.jpg" alt="" class="profile-img">
         </div>
+        <div class="text-data">
+            <span class="name">GeekyyFit</span>
+            <span class="job">Web Developer</span>
+            <div class="media-buttons">
+                <a href="https://twitter.com/GauravR_0203" style="background: #1da1f2;" class="links">
+                    <i class='bx bxl-twitter'></i>
+                </a>
+                <a href="https://www.instagram.com/geekyy_fit/" style="background: #e1306c;" class="links"><i class='bx bxl-instagram'></i></a>
+                <a href="https://github.com/GauravR02" style="background: #333;" class="links"><i class='bx bxl-github'></i></a>
+            </div>
+            <div class="buttons">
+                <button class="button">Follow</button>
+                <button class="button">Message</button>
+
+            </div>
+        </div>
+
+        <div class="analytics">
+
+            <div class="data">
+                <i class='bx bxs-heart'></i>
+                <span class="number">1k</span>
+            </div>
+            <div class="data">
+                <i class='bx bxs-message-dots'></i>
+                <span class="number">1k</span>
+            </div>
+            <div class="data">
+                <i class='bx bxs-share'></i> <span class="number">1k</span>
+            </div>
+        </div>
     </div>
 </body>
 
