--- a/Login-SignUp-Form/index.html
+++ b/Login-SignUp-Form/index.html
@@ -28,7 +28,9 @@
 
                     <div class="input-field">
                         <input type="password" name="password" id="password" placeholder="Enter your password" required>
-                        <i class='bx bx-lock-alt'></i> </div>
+                        <i class='bx bx-lock-alt'></i>
+                        <i class='bx bx-low-vision '></i>
+                    </div>
 
                 </form>
             </div>
