--- a/3.RESP-registrationForm/index.html
+++ b/3.RESP-registrationForm/index.html
@@ -46,18 +46,21 @@
                 </div>
             </div>
             <div class="gender-details">
+                <input type="radio" name="gender" id="dot-1">
+                <input type="radio" name="gender" id="dot-2">
+                <input type="radio" name="gender" id="dot-3">
                 <span class="gender-title">Gender</span>
                 <div class="category">
-                    <label for="">
+                    <label for="dot-1">
             <span class="dot one"></span>
             <span class="gender">Male</span>
             </label>
-                    <label for="">
-            <span class="dot one"></span>
+                    <label for="dot-2">
+            <span class="dot two"></span>
             <span class="gender">Female</span>
         </label>
-                    <label for="">
-            <span class="dot one"></span>
+                    <label for="dot-3">
+            <span class="dot three"></span>
             <span class="gender">Prefer Not to say</span>
         </label>
                 </div>
