--- a/4.ContactUs-Form/index.html
+++ b/4.ContactUs-Form/index.html
@@ -6,9 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us Form</title>
 
+    <!-- css link -->
+    <link rel="stylesheet" href="style.css">
+
+
 </head>
 
 <body>
+    <div class="container">
+        <div class="content">
+            <div class="left-side">
+                <div class="address details">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <div class="topic">Address</div>
+                    <div class="text-one">Pune, MH12</div>
+                    <div class="text-two">Pimpri Chinchwad </div>
+                </div>
+                <div class="phone details">
+                    <i class="fas fa-phone-alt"></i>
+                    <div class="topic">Phone</div>
+                    <div class="text-one">+91 7499593164</div>
+                    <div class="text-two">+91 7826679767</div>
+                </div>
+                <div class="email details">
+                    <i class="fas fa-envelope"></i>
+                    <div class="topic">Email</div>
+                    <div class="text-one">gauravrajput020203@gmail.com</div>
+                    <div class="text-two">codergaurav02@gmail.com</div>
+                </div>
+            </div>
+            <div class="right-side">
+                <div class="topic-text">
+                    Send us a Message
+                </div>
+                <p>If you have any work related queries, then you can send me message from here. It's my pleasure to help you.</p>
+            </div>
+            <form action="#">
+                <div class="input-box">
+                    <input type="text" placeholder="Enter your name">
+                </div>
+                <div class="input-box">
+                    <input type="email" placeholder="Enter your email">
+                </div>
+                <div class="input-box message-box">
+                    <textarea></textarea>
+                </div>
+                <div class="button">
+                    <input type="button" value="send now">
+                </div>
+            </form>
+        </div>
+    </div>
+
+
+
+    <!-- Fontawesome CDN link -->
+
+    <script src="https://kit.fontawesome.com/63c09ca13c.js" crossorigin="anonymous"></script>
 
 </body>
 
