--- a/4.ContactUs-Form/index.html
+++ b/4.ContactUs-Form/index.html
@@ -31,8 +31,8 @@
                 <div class="email details">
                     <i class="fas fa-envelope"></i>
                     <div class="topic">Email</div>
-                    <div class="text-one">gauravrajput020203@gmail.com</div>
-                    <div class="text-two">codergaurav02@gmail.com</div>
+                    <div class="text-one">codergaurav02@gmail.com</div>
+                    <div class="text-two">gauravrajput020203@gmail.com</div>
                 </div>
             </div>
             <div class="right-side">
@@ -40,21 +40,22 @@
                     Send us a Message
                 </div>
                 <p>If you have any work related queries, then you can send me message from here. It's my pleasure to help you.</p>
+
+                <form action="#">
+                    <div class="input-box">
+                        <input type="text" placeholder="Enter your name">
+                    </div>
+                    <div class="input-box">
+                        <input type="email" placeholder="Enter your email">
+                    </div>
+                    <div class="input-box message-box">
+                        <textarea></textarea>
+                    </div>
+                    <div class="button">
+                        <input type="button" value="send now">
+                    </div>
+                </form>
             </div>
-            <form action="#">
-                <div class="input-box">
-                    <input type="text" placeholder="Enter your name">
-                </div>
-                <div class="input-box">
-                    <input type="email" placeholder="Enter your email">
-                </div>
-                <div class="input-box message-box">
-                    <textarea></textarea>
-                </div>
-                <div class="button">
-                    <input type="button" value="send now">
-                </div>
-            </form>
         </div>
     </div>
 
