--- a/6.Resp-Navbar/index.html
+++ b/6.Resp-Navbar/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <nav>
-        <div class="logo">
-            <a href="#">GeekyyFit</a>
+        <div class="menu">
+            <div class="logo"><a href="#">GeekyyFit</a></div>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
