made the webpage responsive and used check id for the hamburger menu creation

--- a/6.Resp-Navbar/index.html
+++ b/6.Resp-Navbar/index.html
@@ -12,14 +12,17 @@
 <body>
     <nav>
         <div class="menu">
+            <input type="checkbox" id="check">
             <div class="logo"><a href="#">GeekyyFit</a></div>
             <ul>
+                <label class="button cancel" for="check"><i class="fas fa-times" ></i></label>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">Feedback</a></li>
             </ul>
+            <label class="button bars" for="check"><i class="fas fa-bars" ></i></label>
         </div>
     </nav>
 
